fixed missed spacing issue
(cherry picked from commit a6dc281a1303bcdab2ae2bc12f1504ebe7ce4c98)

--- a/galaxyui/src/app/authors/detail/author-detail.component.less
+++ b/galaxyui/src/app/authors/detail/author-detail.component.less
@@ -100,6 +100,8 @@
         }
         .count {
             font-weight: 700;
+            margin-left: 1px;
+            margin-right: 3px;
         }
     }
 }
